--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,11 @@
 <head>
   <title>SiteDevinsantos</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+
+  <!--[if lt IE 9]><script type="text/javascript" src="/javascripts/html5.min.js"></script><![endif]-->
+  <script type="text/javascript" src="/javascripts/head.load.min.js"></script>
+
+  <%= yield :head %>
   <%= csrf_meta_tag %>
 </head>
 <body>
