--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <p>Home</p>
 <% content_for :head do %>
 	<script type="text/javascript">
-		head.js('/javascripts/jquery-1.5.min.js',
+		head.js('/javascripts/jquery.min.js',
 				'/javascripts/jquery.tmpl.min.js',
 				'http://search.twitter.com/search.json?callback=jsonTwitterApi&q=%23devinsantos&rpp=4',
 				'http://api.flickr.com/services/rest/?method=flickr.people.getPublicPhotos&format=json&per_page=20&api_key=API_KEY_TROCAR&user_id=TROCARUSER_ID',
 				'http://vimeo.com/api/v2/devinsantos/videos.json?callback=jsonVimeoApi');
-		head.ready(function() {
+
 			
 		var jsonTwitterApi = function(data) {
 			var content = $('#twitterContent').empty().hide();
@@ -15,6 +15,9 @@
 			content.append(ul).fadeIn();
 		};
 		var jsonFlickrApi = function(data) {
+			if (data == undefined) {
+				return;
+			}
 			var content = $('#picturesContent').empty().hide();
 			var template = $('#picturesTemplate').tmpl(data.photos.photo);
 			content.append(template);
@@ -56,6 +59,9 @@
 			else return (d>9?d:('0'+d))+'/'+(m>9?m:('0'+m))+'/'+y;
 		};
 		var jsonVimeoApi = function(data) {
+			if (data == undefined) {
+				return;
+			}
 			var limit = 3;
 			data.splice(limit, data.length);
 			var content = $('#videosContent').empty().hide();
@@ -65,7 +71,25 @@
 		};
 	</script>
 <% end %>
-
+<div>
+	<section id="twitter" class="grid_6 omega">
+		<h3>Twitter</h3>
+		<div class="prefix_1" id="twitterContent">Carregando twitties...</div>
+		<script id="twitterTemplate" type="text/x-jquery-tmpl">
+			<li class="clearfix">
+				<a href="http://twitter.com/${from_user}" target="_blank" class="photo"><img src="${profile_image_url}" alt="${from_user}" width="48" height="48"></a>
+				<p>
+					{{html linkify(text)}}
+					<br>
+					<span><time datetime="${created_at}"><a href="http://twitter.com/${from_user}/status/${id_str}" target="_blank">${formatDate(created_at)}</a></time> via {{html decodeHTML(source)}}</span>
+				</p>
+			</li>
+		</script>
+		<footer>
+			Siga-nos no twitter: <a href="http://twitter.com/devinsantos" target="_blank">@devinsantos</a>
+		</footer>
+	</section>
+</div>
 <div>
 	<section id="videos" class="grid_6 omega">
 		<h3>Vídeos</h3>
